discussion/kv_engine/149093/149093_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma WriteDocs histograms for cbstats kvtimings

Change-Id: I7eb4d8c5f2c88653c4e39c56b5a2f0ffa11239ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-19 19:37:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-19 20:14:44.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29536/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29536/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34413/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34413/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7808/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7808/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9518/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8435/ : FAILURE

Compile error at [2021-03-19T19:40:46.388Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9731/ : FAILURE

Compile error at [2021-03-19T20:08:01.779Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9731/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17285/ : FAILURE

Compile error at [2021-03-19T20:09:20.415Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9372/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
